--- a/.htaccess
+++ b/.htaccess
@@ -9,3 +9,21 @@ RewriteRule ^([^\.]+)$ $1.html [L]
 # Redirect old .html URLs to extension-less URLs
 RewriteCond %{THE_REQUEST} \s/([^.]+)\.html [NC]
 RewriteRule ^ /%1 [R=301,L]
+
+# Enable HSTS
+Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+
+# Content Sniffing Protection
+Header set X-Content-Type-Options "nosniff"
+
+# Clickjacking Protection
+Header set X-Frame-Options "DENY"
+
+# XSS Protection
+Header set X-XSS-Protection "1; mode=block"
+
+# URL Rewriting to avoid URL extensions
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^([^\.]+)$ $1.html [NC,L]
