--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,14 @@
 # Enable URL rewriting
 RewriteEngine On
 
+# Redirect old .html URLs to extension-less URLs
+RewriteCond %{THE_REQUEST} \s/([^.]+)\.html [NC]
+RewriteRule ^ /%1 [R=301,L]
+
 # Hide .html extension
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.html [L]
-
-# Redirect old .html URLs to extension-less URLs
-RewriteCond %{THE_REQUEST} \s/([^.]+)\.html [NC]
-RewriteRule ^ /%1 [R=301,L]
 
 # Enable HSTS
 Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
@@ -22,8 +22,7 @@ Header set X-Frame-Options "DENY"
 # XSS Protection
 Header set X-XSS-Protection "1; mode=block"
 
-# URL Rewriting to avoid URL extensions
-RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^([^\.]+)$ $1.html [NC,L]
+# Long caching times for static assets
+<FilesMatch "\.(css|js|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$">
+    Header set Cache-Control "max-age=31536000, public"
+</FilesMatch>
